--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -45,22 +45,58 @@
             </objects>
             <point key="canvasLocation" x="-5495.652173913044" y="-2295.5357142857142"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Home Table View Controller-->
         <scene sceneID="5nO-LB-v5R">
             <objects>
-                <tableViewController id="VX0-bg-8tJ" sceneMemberID="viewController">
+                <tableViewController id="VX0-bg-8tJ" userLabel="Home Table View Controller" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rhV-G6-ZQs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="rZI-C9-LIq">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="120" id="rZI-C9-LIq" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rZI-C9-LIq" id="k9R-XW-ssn">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pAk-q2-Vpe">
+                                            <rect key="frame" x="20" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="65" id="JE2-ea-QIG"/>
+                                                <constraint firstAttribute="width" constant="65" id="qB6-JK-JQ8"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiQ-po-NwS">
+                                            <rect key="frame" x="93" y="11" width="82" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AyI-iT-3Cq">
+                                            <rect key="frame" x="93" y="37" width="301" height="72"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="bottom" constant="4" id="3RW-cw-ItI"/>
+                                        <constraint firstItem="QiQ-po-NwS" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="8" id="8qa-op-GKY"/>
+                                        <constraint firstItem="pAk-q2-Vpe" firstAttribute="leading" secondItem="k9R-XW-ssn" secondAttribute="leadingMargin" id="NuC-QL-pOf"/>
+                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="bottom" secondItem="k9R-XW-ssn" secondAttribute="bottomMargin" id="Y5l-LH-gHz"/>
+                                        <constraint firstItem="pAk-q2-Vpe" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="c5l-Vd-mgL"/>
+                                        <constraint firstItem="QiQ-po-NwS" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="rpd-fw-6a8"/>
+                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="8" id="uuF-Ip-eO0"/>
+                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="trailing" secondItem="k9R-XW-ssn" secondAttribute="trailingMargin" id="wyh-Xd-YY6"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImage" destination="pAk-q2-Vpe" id="oK5-fo-3OL"/>
+                                    <outlet property="tweetContentLabel" destination="AyI-iT-3Cq" id="pry-et-emI"/>
+                                    <outlet property="usernameLabel" destination="QiQ-po-NwS" id="SXk-pE-3nj"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -68,11 +104,18 @@
                             <outlet property="delegate" destination="VX0-bg-8tJ" id="8hL-Ue-uXJ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="1cz-2p-8f1"/>
+                    <navigationItem key="navigationItem" title="Home" id="1cz-2p-8f1">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="FQC-7z-s0u">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogoutClicked:" destination="VX0-bg-8tJ" id="2oS-i6-erm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hI8-9O-gzN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-5496" y="-743"/>
+            <point key="canvasLocation" x="-5497.1014492753629" y="-743.30357142857144"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wou-g8-GG6">
@@ -81,6 +124,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qUi-hl-CAa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="VX0-bg-8tJ" kind="relationship" relationship="rootViewController" id="OqV-Y3-up7"/>
