--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -16,9 +16,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oqk-Lg-39m" userLabel="Title">
+                                <rect key="frame" x="0.0" y="373" width="414" height="150"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just Another " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qgl-Vl-jHT">
+                                        <rect key="frame" x="76.666666666666686" y="25.000000000000004" width="261" height="50.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="42"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Twitter." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3Y-vV-uES">
+                                        <rect key="frame" x="190.66666666666663" y="74.666666666666686" width="147" height="51"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="42"/>
+                                        <color key="textColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="G8X-oF-vCk"/>
+                                    <constraint firstItem="I3Y-vV-uES" firstAttribute="centerY" secondItem="oqk-Lg-39m" secondAttribute="centerY" constant="25" id="Mrb-sP-9Wz"/>
+                                    <constraint firstItem="I3Y-vV-uES" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="oqk-Lg-39m" secondAttribute="leading" constant="20" symbolic="YES" id="TUm-Db-Apw"/>
+                                    <constraint firstItem="I3Y-vV-uES" firstAttribute="trailing" secondItem="Qgl-Vl-jHT" secondAttribute="trailing" id="akl-we-rq0"/>
+                                    <constraint firstItem="Qgl-Vl-jHT" firstAttribute="centerY" secondItem="oqk-Lg-39m" secondAttribute="centerY" constant="-25" id="bOH-o1-nqd"/>
+                                    <constraint firstItem="Qgl-Vl-jHT" firstAttribute="centerX" secondItem="oqk-Lg-39m" secondAttribute="centerX" id="i76-OY-LVb"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xFT-QS-vFj" userLabel="Login Button">
-                                <rect key="frame" x="60" y="781" width="294" height="41"/>
+                                <rect key="frame" x="107" y="573" width="200" height="41"/>
                                 <color key="backgroundColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="zvv-Gz-2U3"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="tintColor" red="0.396078431372549" green="0.46666666666666667" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Login">
@@ -31,14 +60,18 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="l4F-6X-53k" firstAttribute="trailing" secondItem="xFT-QS-vFj" secondAttribute="trailing" constant="60" id="Txe-wt-TjX"/>
-                            <constraint firstItem="l4F-6X-53k" firstAttribute="bottom" secondItem="xFT-QS-vFj" secondAttribute="bottom" constant="40" id="tAm-Jg-BGp"/>
-                            <constraint firstItem="xFT-QS-vFj" firstAttribute="leading" secondItem="l4F-6X-53k" secondAttribute="leading" constant="60" id="uFc-Vm-Wba"/>
+                            <constraint firstItem="oqk-Lg-39m" firstAttribute="trailing" secondItem="l4F-6X-53k" secondAttribute="trailing" id="LVZ-ke-LoI"/>
+                            <constraint firstItem="oqk-Lg-39m" firstAttribute="centerY" secondItem="EYX-9X-xii" secondAttribute="centerY" id="PTA-f0-eEp"/>
+                            <constraint firstItem="oqk-Lg-39m" firstAttribute="centerX" secondItem="EYX-9X-xii" secondAttribute="centerX" id="WyH-q4-TXc"/>
+                            <constraint firstItem="xFT-QS-vFj" firstAttribute="top" secondItem="oqk-Lg-39m" secondAttribute="bottom" constant="50" id="ele-Cm-ReI"/>
+                            <constraint firstItem="oqk-Lg-39m" firstAttribute="leading" secondItem="l4F-6X-53k" secondAttribute="leading" id="hhc-Mh-yGd"/>
+                            <constraint firstItem="xFT-QS-vFj" firstAttribute="centerX" secondItem="EYX-9X-xii" secondAttribute="centerX" id="ub8-CA-TIm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="l4F-6X-53k"/>
                     </view>
                     <connections>
-                        <segue destination="2lE-zW-rVg" kind="presentation" identifier="loginSuccess" id="37W-fb-l1M"/>
+                        <outlet property="loginButton" destination="xFT-QS-vFj" id="OAY-D2-FPC"/>
+                        <segue destination="2lE-zW-rVg" kind="show" identifier="loginSuccess" id="S0n-ig-o8z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgK-4t-e15" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -112,8 +145,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="tda-uV-GaR" kind="unwind" identifier="unwindToLogin" unwindAction="prepareForUnwindWithSegue:" id="5BY-so-Arb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hI8-9O-gzN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="tda-uV-GaR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-5497.1014492753629" y="-743.30357142857144"/>
         </scene>
@@ -121,6 +158,7 @@
         <scene sceneID="Wou-g8-GG6">
             <objects>
                 <navigationController id="2lE-zW-rVg" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="mmb-Mj-yrJ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qUi-hl-CAa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
