--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -96,33 +96,33 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pAk-q2-Vpe">
-                                            <rect key="frame" x="20" y="11" width="65" height="65"/>
+                                            <rect key="frame" x="20" y="11" width="45" height="45"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="65" id="JE2-ea-QIG"/>
-                                                <constraint firstAttribute="width" constant="65" id="qB6-JK-JQ8"/>
+                                                <constraint firstAttribute="height" constant="45" id="JE2-ea-QIG"/>
+                                                <constraint firstAttribute="width" constant="45" id="qB6-JK-JQ8"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiQ-po-NwS">
-                                            <rect key="frame" x="93" y="11" width="82" height="22"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <rect key="frame" x="75" y="11" width="80" height="22"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AyI-iT-3Cq">
-                                            <rect key="frame" x="93" y="37" width="301" height="72"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <rect key="frame" x="75" y="37" width="319" height="72"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="bottom" constant="4" id="3RW-cw-ItI"/>
-                                        <constraint firstItem="QiQ-po-NwS" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="8" id="8qa-op-GKY"/>
+                                        <constraint firstItem="QiQ-po-NwS" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="10" id="8qa-op-GKY"/>
+                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="leading" id="BOO-Mq-g7F"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="leading" secondItem="k9R-XW-ssn" secondAttribute="leadingMargin" id="NuC-QL-pOf"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="bottom" secondItem="k9R-XW-ssn" secondAttribute="bottomMargin" id="Y5l-LH-gHz"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="c5l-Vd-mgL"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="rpd-fw-6a8"/>
-                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="8" id="uuF-Ip-eO0"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="trailing" secondItem="k9R-XW-ssn" secondAttribute="trailingMargin" id="wyh-Xd-YY6"/>
                                     </constraints>
                                 </tableViewCellContentView>
