--- a/Twitter/Storyboards/Launch Screen.storyboard
+++ b/Twitter/Storyboards/Launch Screen.storyboard
@@ -18,9 +18,12 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="TwitterLogo" translatesAutoresizingMaskIntoConstraints="NO" id="pSy-aG-pvO">
                                 <rect key="frame" x="147" y="388" width="120" height="120"/>
+                                <color key="backgroundColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.11372549019607843" green="0.63137254901960782" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="pSy-aG-pvO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9MO-8x-LCq"/>
                             <constraint firstItem="pSy-aG-pvO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="wZs-86-DEX"/>
