--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -96,58 +96,86 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pAk-q2-Vpe">
-                                            <rect key="frame" x="20" y="11" width="45" height="45"/>
+                                            <rect key="frame" x="20" y="11" width="48" height="48"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="45" id="JE2-ea-QIG"/>
-                                                <constraint firstAttribute="width" constant="45" id="qB6-JK-JQ8"/>
+                                                <constraint firstAttribute="height" constant="48" id="JE2-ea-QIG"/>
+                                                <constraint firstAttribute="width" constant="48" id="qB6-JK-JQ8"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="752" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiQ-po-NwS" userLabel="Name Label">
-                                            <rect key="frame" x="75" y="11" width="80" height="22"/>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                            <rect key="frame" x="78" y="10.999999999999998" width="75.666666666666686" height="20.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="@username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bY0-WC-6it" userLabel="Username Label">
-                                            <rect key="frame" x="160" y="11" width="96.333333333333314" height="22"/>
+                                            <rect key="frame" x="158.66666666666666" y="10.999999999999998" width="91.333333333333343" height="20.333333333333329"/>
                                             <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text=" · 16h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BbY-hP-Yby" userLabel="Time Posted Label">
-                                            <rect key="frame" x="256.33333333333331" y="11" width="43.666666666666686" height="22"/>
+                                            <rect key="frame" x="250.00000000000003" y="10.999999999999998" width="41.333333333333343" height="20.333333333333329"/>
                                             <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AyI-iT-3Cq">
-                                            <rect key="frame" x="75" y="37" width="319" height="72"/>
+                                            <rect key="frame" x="78" y="35.333333333333336" width="316" height="25.666666666666664"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWt-fG-uCn" userLabel="Fav Button">
+                                            <rect key="frame" x="354" y="69" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="1Rt-s4-GA8"/>
+                                                <constraint firstAttribute="width" constant="30" id="pFj-Ta-nP6"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="rZI-C9-LIq" eventType="touchUpInside" id="nbO-Wa-Xkn"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cK-qf-VtW" userLabel="Retweet Button">
+                                            <rect key="frame" x="314" y="69" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="Q9z-jP-Ztu"/>
+                                                <constraint firstAttribute="height" constant="30" id="icn-wN-MBh"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="rZI-C9-LIq" eventType="touchUpInside" id="HPj-X8-8Bk"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="bottom" constant="4" id="3RW-cw-ItI"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="dWt-fG-uCn" secondAttribute="bottom" constant="10" id="4Zc-95-7s2"/>
+                                        <constraint firstItem="dWt-fG-uCn" firstAttribute="leading" secondItem="4cK-qf-VtW" secondAttribute="trailing" constant="10" id="4zJ-bb-pAv"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="10" id="8qa-op-GKY"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="leading" id="BOO-Mq-g7F"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="bottom" secondItem="QiQ-po-NwS" secondAttribute="bottom" id="Dhv-RA-7Kf"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="4cK-qf-VtW" secondAttribute="bottom" constant="10" id="Iyq-PR-5Wv"/>
                                         <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="BbY-hP-Yby" secondAttribute="trailing" id="L41-la-wcP"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="leading" secondItem="k9R-XW-ssn" secondAttribute="leadingMargin" id="NuC-QL-pOf"/>
                                         <constraint firstItem="BbY-hP-Yby" firstAttribute="left" secondItem="bY0-WC-6it" secondAttribute="right" id="WNH-9a-ieP"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="top" id="We0-BV-Slg"/>
-                                        <constraint firstItem="AyI-iT-3Cq" firstAttribute="bottom" secondItem="k9R-XW-ssn" secondAttribute="bottomMargin" id="Y5l-LH-gHz"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="c5l-Vd-mgL"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="trailing" constant="5" id="c9O-Cm-avq"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="dWt-fG-uCn" secondAttribute="trailing" constant="10" id="el5-gN-3hY"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="rpd-fw-6a8"/>
                                         <constraint firstItem="BbY-hP-Yby" firstAttribute="top" secondItem="bY0-WC-6it" secondAttribute="top" id="s8p-Hs-j0x"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="trailing" secondItem="k9R-XW-ssn" secondAttribute="trailingMargin" id="wyh-Xd-YY6"/>
+                                        <constraint firstItem="dWt-fG-uCn" firstAttribute="top" secondItem="AyI-iT-3Cq" secondAttribute="bottom" constant="8" id="zbK-0g-vyo"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="dWt-fG-uCn" id="dQa-43-0a5"/>
                                     <outlet property="profileImage" destination="pAk-q2-Vpe" id="oK5-fo-3OL"/>
+                                    <outlet property="retweetButton" destination="4cK-qf-VtW" id="fFu-bu-xAM"/>
                                     <outlet property="screennameLabel" destination="bY0-WC-6it" id="yaw-IP-U8E"/>
                                     <outlet property="timeLabel" destination="BbY-hP-Yby" id="3kA-xb-Cgd"/>
                                     <outlet property="tweetContentLabel" destination="AyI-iT-3Cq" id="pry-et-emI"/>
@@ -277,4 +305,8 @@
             <point key="canvasLocation" x="-5497.1014492753629" y="-683.03571428571422"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
